--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ UE4.sln
 UE4.suo
 UE4.*.suo
 
-UnrealVR/Binaries/
-UnrealVR/DerivedDataCache/
-UnrealVR/Intermediate/
-UnrealVR/Saved/
+VRPRototype/Binaries/
+VRPRototype/DerivedDataCache/
+VRPRototype/Intermediate/
+VRPRototype/Saved/
