feat: add downloaded assets to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Visual Studio 2015 user specific files
 .vs/
 
+# Visual Studio 2015 database file
+*.VC.db
+
 # Compiled Object files
 *.slo
 *.lo
@@ -96,3 +99,4 @@ VRPRototype/Binaries/
 VRPRototype/DerivedDataCache/
 VRPRototype/Intermediate/
 VRPRototype/Saved/
+VRPRototype/Content/SunTemple/
