--- a/VRPrototype/Config/DefaultInput.ini
+++ b/VRPrototype/Config/DefaultInput.ini
@@ -103,6 +103,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Vive_Left_Trackpad_Y)
++AxisMappings=(AxisName="MoveSide",Scale=1.000000,Key=Vive_Left_Trackpad_Y)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
