--- a/VRPrototype/Config/DefaultInput.ini
+++ b/VRPrototype/Config/DefaultInput.ini
@@ -94,17 +94,19 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trigger_Click)
 +ActionMappings=(ActionName="Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Trigger_Click)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="MoveSide",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MoveSide",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Turn",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=Down)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Vive_Left_Trackpad_Y)
-+AxisMappings=(AxisName="MoveSide",Scale=1.000000,Key=Vive_Left_Trackpad_Y)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Vive_Left_Trackpad_Up_Touch)
++AxisMappings=(AxisName="MoveBack",Scale=-1.000000,Key=Vive_Left_Trackpad_Down_Touch)
++AxisMappings=(AxisName="MoveLeft",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="MoveBack",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveLeft",Scale=-1.000000,Key=Vive_Left_Trackpad_Left_Touch)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Vive_Left_Trackpad_Right_Touch)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
