--- a/VRPrototype/Config/SteamVRBindings/steamvr_manifest.json
+++ b/VRPrototype/Config/SteamVRBindings/steamvr_manifest.json
@@ -82,6 +82,14 @@
 			"type": "boolean"
 		},
 		{
+			"name": "/actions/main/in/GripLeft",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/GripRight",
+			"type": "boolean"
+		},
+		{
 			"name": "/actions/main/in/MoveForward axis",
 			"type": "vector1"
 		},
@@ -213,6 +221,8 @@
 			"/actions/main/out/vibrateright": "Haptic (Right)",
 			"/actions/main/in/open_console": "Open Console",
 			"/actions/main/in/Teleport": "Teleport",
+			"/actions/main/in/GripLeft": "GripLeft",
+			"/actions/main/in/GripRight": "GripRight",
 			"/actions/main/in/MoveForward axis": "MoveForward",
 			"/actions/main/in/MoveBack axis": "MoveBack",
 			"/actions/main/in/MoveLeft axis": "MoveLeft",
