--- a/VRPrototype/Config/SteamVRBindings/steamvr_manifest.json
+++ b/VRPrototype/Config/SteamVRBindings/steamvr_manifest.json
@@ -90,6 +90,14 @@
 			"type": "boolean"
 		},
 		{
+			"name": "/actions/main/in/LeftTrigger",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/RightTrigger",
+			"type": "boolean"
+		},
+		{
 			"name": "/actions/main/in/MoveForward axis",
 			"type": "vector1"
 		},
@@ -223,6 +231,8 @@
 			"/actions/main/in/Teleport": "Teleport",
 			"/actions/main/in/GripLeft": "GripLeft",
 			"/actions/main/in/GripRight": "GripRight",
+			"/actions/main/in/LeftTrigger": "LeftTrigger",
+			"/actions/main/in/RightTrigger": "RightTrigger",
 			"/actions/main/in/MoveForward axis": "MoveForward",
 			"/actions/main/in/MoveBack axis": "MoveBack",
 			"/actions/main/in/MoveLeft axis": "MoveLeft",
