--- a/.gitignore
+++ b/.gitignore
@@ -99,4 +99,5 @@ VRPRototype/Binaries/
 VRPRototype/DerivedDataCache/
 VRPRototype/Intermediate/
 VRPRototype/Saved/
+VRPRototype/Build/
 VRPRototype/Content/SunTemple/
