--- a/VRPrototype/Config/DefaultEngine.ini
+++ b/VRPrototype/Config/DefaultEngine.ini
@@ -24,3 +24,6 @@ ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/Engine.RendererSettings]
+r.ForwardShading=True
+
