chore: created controller interface

--- a/VRPrototype/Config/DefaultEngine.ini
+++ b/VRPrototype/Config/DefaultEngine.ini
@@ -27,3 +27,5 @@ GlobalDefaultServerGameMode=None
 [/Script/Engine.RendererSettings]
 r.ForwardShading=True
 
+[/Script/Engine.Engine]
++ActiveClassRedirects=(OldClassName="HandController", NewClassName="PaintBrushHandController")
