--- a/VRPrototype/Config/DefaultEngine.ini
+++ b/VRPrototype/Config/DefaultEngine.ini
@@ -9,6 +9,12 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RendererSettings]
+r.ForwardShading=True
+
+[/Script/Engine.Engine]
++ActiveClassRedirects=(OldClassName="HandController", NewClassName="PaintBrushHandController")
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MainMap.MainMap
 LocalMapOptions=
@@ -21,11 +27,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/MainMap.MainMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/VRGameMode.VRGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_UIGameMode.BP_UIGameMode_C
 GlobalDefaultServerGameMode=None
 
-[/Script/Engine.RendererSettings]
-r.ForwardShading=True
 
-[/Script/Engine.Engine]
-+ActiveClassRedirects=(OldClassName="HandController", NewClassName="PaintBrushHandController")
