feat: add main menu ui components

--- a/VRPrototype/Config/DefaultEngine.ini
+++ b/VRPrototype/Config/DefaultEngine.ini
@@ -25,9 +25,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/MainMap.MainMap
+GameDefaultMap=/Game/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_UIGameMode.BP_UIGameMode_C
 GlobalDefaultServerGameMode=None
-
 
